Added short python scikit learn snippet to compute tf-idf

--- a/presentations/word-embedding-spaces-first-meeting.html
+++ b/presentations/word-embedding-spaces-first-meeting.html
@@ -9,7 +9,7 @@
 
 
 
-  <meta name="date" content="2022-03-03" />
+  <meta name="date" content="2022-03-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -3142,7 +3142,7 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2022-03-03</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2022-03-07</p>
           </hgroup>
   </slide>
 
@@ -3170,6 +3170,35 @@ slide:not(.current) .plotly.html-widget{
 <li>Hyperbolic embeddings, singularities and topological polysemy</li>
 </ul></li>
 </ul>
+
+</article></slide><slide class=""><hgroup><h2>Motivation</h2></hgroup><article  id="motivation">
+
+<ul>
+<li>Winograd schemas
+
+<ul>
+<li><p>The city councilmen refused the demonstrators a permit because they feared violence.</p></li>
+<li><p>The city councilmen refused the demonstrators a permit because they advocated violence.</p></li>
+<li><p>The trophy doesn’t fit into the brown suitcase because it’s too large.</p></li>
+<li><p>The trophy doesn’t fit into the brown suitcase because it’s too small.</p></li>
+</ul></li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>Motivation</h2></hgroup><article  id="motivation-1">
+
+<ul>
+<li>Garden-path sentences
+
+<ul>
+<li>The old man the boat.</li>
+<li>The complex houses married and single soldiers and their families.</li>
+<li>The horse raced past the barn fell.</li>
+</ul></li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>Applications of word embeddings</h2></hgroup><article  id="applications-of-word-embeddings">
+
+<p>TODO</p>
 
 </article></slide><slide class=""><hgroup><h2>Static word embeddings</h2></hgroup><article  id="static-word-embeddings">
 
